<resources>
    <string name="app_name">cafe Order</string>
    <string name="logo_description">Логотип кафу</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="wlcm_text">Добро пожаловать</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваш пароль:</string>
    <string name="create_order">Создать заказ</string>
    <string name="make_order">Оформить заказ</string>
    <string name="wlcm_personal">Привет, %s! Что желаете?</string>
    <string name="check_topping">Что добавить в ваш %s?</string>
    <string name="toast_login">Необходимо заполнить все поля</string>
    <string name="choose_drink_type">Выбирите тип напитка</string>
    <string name="tea">чай</string>
    <string name="coffee">кофе</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лемон</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">Необходимые добавки:\n</string>

    <string-array name="items_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Капучино</item>
        <item>Латте</item>
    </string-array>
    <string-array name="items_of_tea">
        <item>Черный</item>
        <item>Зелёный</item>
        <item>Красный</item>
        <item>Белый</item>
    </string-array>
</resources>
